--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
     "main": "index.js",
     "scripts": {
         "start:dev": "nodemon",
-        "build": "npx tsc"
+        "build": "rimraf ./dist && npx tsc",
+        "postinstall": "npm run build",
+        "start": "node ./dist/src/index.js"
     },
     "author": "yotozangue",
     "license": "ISC",
     "dependencies": {
+        "app-root-path": "^3.0.0",
         "config": "^3.3.7",
         "express": "^4.18.1",
+        "rimraf": "^3.0.2",
         "typescript": "^4.7.4"
     },
     "devDependencies": {
+        "@types/app-root-path": "^1.2.4",
         "@types/config": "^0.0.41",
         "@types/express": "^4.17.13",
         "@types/mime-types": "^2.1.1",
