--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
         "multer": "^1.4.5-lts.1",
         "nodemon": "^2.0.16",
         "ts-node": "^10.8.1"
+    },
+    "engines": {
+        "node": "16.x",
+        "npm": "8.x"
     }
 }
