--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
         "config": "^3.3.7",
         "express": "^4.18.1",
         "rimraf": "^3.0.2",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "multer": "^1.4.5-lts.1",
+        "cors": "^2.8.5",
+        "body-parser": "^1.20.0",
+        "csvtojson": "^2.0.10"
     },
     "devDependencies": {
         "@types/app-root-path": "^1.2.4",
@@ -25,10 +29,6 @@
         "@types/mime-types": "^2.1.1",
         "@types/multer": "^1.4.7",
         "@types/node": "^18.0.0",
-        "body-parser": "^1.20.0",
-        "cors": "^2.8.5",
-        "csvtojson": "^2.0.10",
-        "multer": "^1.4.5-lts.1",
         "nodemon": "^2.0.16",
         "ts-node": "^10.8.1"
     },
