Add assets folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,14 @@
             "@controllers": [
                 "./src/controllers/*"
             ]
-        }
-    }
+        },
+    },
+    "include": [
+        "src/**/*",
+        "assets/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
 }
