--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "license": "ISC",
     "dependencies": {
         "app-root-path": "^3.0.0",
-        "config": "^3.3.7",
-        "express": "^4.18.1",
-        "rimraf": "^3.0.2",
-        "typescript": "^4.7.4",
-        "multer": "^1.4.5-lts.1",
-        "cors": "^2.8.5",
         "body-parser": "^1.20.0",
-        "csvtojson": "^2.0.10"
+        "config": "^3.3.7",
+        "cors": "^2.8.5",
+        "csvtojson": "^2.0.10",
+        "express": "^4.18.1",
+        "multer": "^1.4.5-lts.1",
+        "rimraf": "^3.0.2",
+        "typescript": "^4.7.4"
     },
     "devDependencies": {
         "@types/app-root-path": "^1.2.4",
         "@types/config": "^0.0.41",
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/mime-types": "^2.1.1",
         "@types/multer": "^1.4.7",
